src/test/deca/syntax/invalid/parser/commentaire_incomplet.deca
// Description:
//    tests de programme incorrect lexicalement (commentaire non termine)
//
// Resultats:
//    ligne 7 : Erreur, commentaire non terminee (sur fin de fichier)

/*commentaire pas finie
